--- a/package.json
+++ b/package.json
@@ -1,37 +1,33 @@
 {
-  "name": "blog",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start":"nodemon --inspect src/index.js",
-    "watch": "node-sass --watch src/resources/scss/ --output src/public/css/",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kaaaaaaaaaaaaaaaaaaaaaaa/Blog.git"
-  },
-  "keywords": [
-    "blog",
-    "nodejs",
-    "js",
-    "html",
-    "css"
-  ],
-  "author": "ka",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/kaaaaaaaaaaaaaaaaaaaaaaa/Blog/issues"
-  },
-  "homepage": "https://github.com/kaaaaaaaaaaaaaaaaaaaaaaa/Blog#readme",
-  "dependencies": {
-    "express": "^4.17.1",
-    "express-handlebars": "^5.3.2"
-  },
-  "devDependencies": {
-    "morgan": "^1.10.0",
-    "node-sass": "^6.0.1",
-    "nodemon": "^2.0.12"
-  }
+    "name": "blog",
+    "version": "1.0.0",
+    "description": "",
+    "main": "src/index.js",
+    "scripts": {
+        "start": "nodemon src/index.js  ",
+        "watch": "node-sass src/resources/scss/ -o src/public/css/app.css",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/kaaaaaaaaaaaaaaaaaaaaaaa/Blog.git"
+    },
+    "keywords": [
+        "blog", "nodejs", "js", "html", "css"
+    ],
+    "author": "ka",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/kaaaaaaaaaaaaaaaaaaaaaaa/Blog/issues"
+    },
+    "homepage": "https://github.com/kaaaaaaaaaaaaaaaaaaaaaaa/Blog#readme",
+    "dependencies": {   
+        "express": "^4.17.1",
+        "express-handlebars": "^5.3.2"
+    },
+    "devDependencies": {
+        "morgan": "^1.10.0",
+        "node-sass": "^6.0.1",
+        "nodemon": "^2.0.12"
+    }
 }
