--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
         "url": "git+https://github.com/kaaaaaaaaaaaaaaaaaaaaaaa/Blog.git"
     },
     "keywords": [
-        "blog", "nodejs", "js", "html", "css"
+        "blog",
+        "nodejs",
+        "js",
+        "html",
+        "css"
     ],
     "author": "ka",
     "license": "ISC",
@@ -21,9 +25,10 @@
         "url": "https://github.com/kaaaaaaaaaaaaaaaaaaaaaaa/Blog/issues"
     },
     "homepage": "https://github.com/kaaaaaaaaaaaaaaaaaaaaaaa/Blog#readme",
-    "dependencies": {   
+    "dependencies": {
         "express": "^4.17.1",
-        "express-handlebars": "^5.3.2"
+        "express-handlebars": "^5.3.2",
+        "mongoose": "^5.13.4"
     },
     "devDependencies": {
         "morgan": "^1.10.0",
