--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "src/index.js",
     "scripts": {
         "start": "nodemon src/index.js  ",
-        "watch": "node-sass src/resources/scss/ -o src/public/css/app.css",
+        "watch": "node-sass src/resources/scss/ -o src/public/css/",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "repository": {
