--- a/package.json
+++ b/package.json
@@ -1,42 +1,42 @@
 {
-    "name": "blog",
-    "version": "1.0.0",
-    "description": "",
-    "main": "src/index.js",
-    "scripts": {
-        "start": "nodemon --inspect src/index.js  ",
-        "watch": "node-sass src/resources/scss/ -o src/public/css/",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/kaaaaaaaaaaaaaaaaaaaaaaa/Blog.git"
-    },
-    "keywords": [
-        "blog",
-        "nodejs",
-        "js",
-        "html",
-        "css"
-    ],
-    "author": "ka",
-    "license": "ISC",
-    "bugs": {
-        "url": "https://github.com/kaaaaaaaaaaaaaaaaaaaaaaa/Blog/issues"
-    },
-    "homepage": "https://github.com/kaaaaaaaaaaaaaaaaaaaaaaa/Blog#readme",
-    "dependencies": {
-        "express": "^4.17.1",
-        "express-handlebars": "^5.3.2",
-        "method-override": "^3.0.0",
-        "mongoose": "^5.13.4",
-        "mongoose-delete": "^0.5.3",
-        "mongoose-sequence": "^5.3.1",
-        "mongoose-slug-generator": "^1.0.4"
-    },
-    "devDependencies": {
-        "morgan": "^1.10.0",
-        "node-sass": "^6.0.1",
-        "nodemon": "^2.0.12"
-    }
+  "name": "blog",
+  "version": "1.0.0",
+  "description": "",
+  "main": "src/index.js",
+  "scripts": {
+    "start": "nodemon  src/index.js",
+    "watch": "node-sass src/resources/scss/ -o src/public/css/",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/kaaaaaaaaaaaaaaaaaaaaaaa/Blog.git"
+  },
+  "keywords": [
+    "blog",
+    "nodejs",
+    "js",
+    "html",
+    "css"
+  ],
+  "author": "ka",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/kaaaaaaaaaaaaaaaaaaaaaaa/Blog/issues"
+  },
+  "homepage": "https://github.com/kaaaaaaaaaaaaaaaaaaaaaaa/Blog#readme",
+  "dependencies": {
+    "express": "^4.17.1",
+    "express-handlebars": "^5.3.2",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.13.4",
+    "mongoose-delete": "^0.5.3",
+    "mongoose-sequence": "^5.3.1",
+    "mongoose-slug-generator": "^1.0.4"
+  },
+  "devDependencies": {
+    "morgan": "^1.10.0",
+    "node-sass": "^6.0.1",
+    "nodemon": "^2.0.12"
+  }
 }
