--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "postinstall": "npm run build",
     "start": "node  src/index.js",
     "watch": "node-sass src/resources/scss/ -o src/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
