--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node  src/index.js",
+    "start": "node src/index.js",
     "watch": "node-sass src/resources/scss/ -o src/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon src/index.js"
@@ -38,6 +38,7 @@
   "devDependencies": {
     "morgan": "^1.10.0",
     "node-sass": "^6.0.1",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "webpack-cli": "^4.9.1"
   }
 }
