--- a/package.json
+++ b/package.json
@@ -36,9 +36,7 @@
     "mongoose-slug-generator": "^1.0.4"
   },
   "devDependencies": {
-    "morgan": "^1.10.0",
     "node-sass": "^6.0.1",
-    "nodemon": "^2.0.15",
-    "webpack-cli": "^4.9.1"
+    "nodemon": "^2.0.15"
   }
 }
