--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "mongoose": "^5.13.4",
     "mongoose-delete": "^0.5.3",
     "mongoose-sequence": "^5.3.1",
-    "mongoose-slug-generator": "^1.0.4"
+    "mongoose-slug-generator": "^1.0.4",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "node-sass": "^6.0.1",
