--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "method-override": "^3.0.0",
+    "mongodb": "^4.1.4",
     "mongoose": "^5.13.4",
     "mongoose-delete": "^0.5.3",
     "mongoose-sequence": "^5.3.1",
     "mongoose-slug-generator": "^1.0.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nconf": "^0.11.3"
   },
   "devDependencies": {
     "node-sass": "^6.0.1",
