--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "mongoose-sequence": "^5.3.1",
     "mongoose-slug-generator": "^1.0.4",
     "morgan": "^1.10.0",
-    "nconf": "^0.11.3"
+    "nconf": "^0.11.3",
+    "pm2": "^5.1.2"
   },
   "devDependencies": {
     "node-sass": "^6.0.1",
