--- a/package.json
+++ b/package.json
@@ -4,14 +4,10 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node src/index.js",
     "watch": "node-sass src/resources/scss/ -o src/public/css/",
     "test": "echo \"No test specified\"",
     "dev": "nodemon src/index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/kaaaaaaaaaaaaaaaaaaaaaaa/Blog.git"
   },
   "keywords": [
     "blog",
@@ -22,10 +18,6 @@
   ],
   "author": "ka",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/kaaaaaaaaaaaaaaaaaaaaaaa/Blog/issues"
-  },
-  "homepage": "https://github.com/kaaaaaaaaaaaaaaaaaaaaaaa/Blog#readme",
   "dependencies": {
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
